# secureshare-getsyncs

./: README.md  main.py  pyproject.toml  shared_files.json
.streamlit/: config.toml
