[project]
name = "getsync"
version = "0.1.0"
description = "Fast and secure file sharing between devices"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.29.0",
    "cryptography>=41.0.0",
    "qrcode[pil]>=7.4.2",
    "python-multipart>=0.0.6",
    "requests>=2.31.0",
    "pillow>=10.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"